--- a/estilos.css
+++ b/estilos.css
@@ -6,11 +6,10 @@ font-family: 'Times New Roman', Times, serif;
 
 }
 nav{
-max-width: 9000px;
-margin: auto;
+max-width: 100%;
+margin-top: 0;
 background-color:#ecb64c ;
 font-size: 20px;
-margin-top:px;
 }
 body{
 background-color:#a6c2c5;
@@ -23,7 +22,7 @@ justify-content: space-around;
 }
 .barraMenu > li > a{
 display: block;
-padding: 15 px 20 px;
+padding: 15px 20px;
 color:rgb(141, 103, 103) ;
 text-decoration: none;
 }
@@ -51,8 +50,8 @@ text-decoration: none;
 }
 #p1{  
 padding:20px; margin-top: 20px;
-margin-left: 50px;
-margin-right: 250px;
+margin-left: 5%;
+margin-right: 5%;
 font-size: 30px;
 border-style: solid;
 border-width: 10px;
@@ -71,7 +70,37 @@ border-color: #527eaf;
 }
 #encabezado{
 font-size: 60px;
-margin-left: 250px;
+margin-left: 5%;
 font-family: 'Courier New', Courier, monospace;
 
+}
+@media (max-width: 600px) {
+  nav {
+    font-size: 16px;
+  }
+
+  .barraMenu {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .barraMenu > li {
+    margin: 5px 0;
+  }
+
+  #encabezado {
+    font-size: 40px;
+    margin-left: 0;
+  }
+
+  #p1, #p2 {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 20px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
