--- a/obra1.css
+++ b/obra1.css
@@ -6,11 +6,11 @@ font-family: 'Times New Roman', Times, serif;
 
 }
 nav{
-max-width: 9000px;
+max-width: 100%;
 margin: auto;
 background-color:#ecb64c ;
 font-size: 20px;
-margin-top:px;
+padding: 10px;
 }
 body{
 background-color:#a6c2c5;
@@ -20,10 +20,11 @@ background-color:#a6c2c5;
 list-style: none;
 display: flex;
 justify-content: space-around;
+flex-wrap: wrap;
 }
 .barraMenu > li > a{
 display: block;
-padding: 15 px 20 px;
+padding: 15px 20px;
 color:rgb(141, 103, 103) ;
 text-decoration: none;
 }
@@ -68,4 +69,61 @@ border-style: solid;
 border-width: 10px;
 border-color: #527eaf;
 border-radius:10px;
+}
+@media (max-width: 768px) {
+  .barraMenu {
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  .barraMenu > li > a {
+    padding: 10px 15px;
+  }
+
+  .barraMenuVertical {
+    position: static; 
+    display: none;
+    width: 100%;
+  }
+
+  .barraMenu li:hover .barraMenuVertical {
+    display: block;
+  }
+
+  .barraMenuVertical li {
+    text-align: center;
+    padding: 10px;
+  }
+
+  .imagen {
+    width: 100%; 
+    margin-right: 0;
+  }
+
+  .texto {
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+
+.Peregrina {
+  display: flex;
+  align-items: center;
+  margin: 20px;
+}
+
+.imagen {
+  width: 500px;
+  height: auto;
+  margin-right: 20px;
+  margin-top: 0px;
+}
+
+.texto {
+  font-size: 30px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #527eaf;
+  border-radius: 10px;
+  padding: 20px;
 }
