--- a/obra1.css
+++ b/obra1.css
@@ -67,60 +67,33 @@ border-width: 10px;
 border-color: #527eaf;
 border-radius:10px;
 }
-@media (max-width: 768px) {
+@media (max-width: 600px) {
+  nav {
+    font-size: 16px;
+  }
+
   .barraMenu {
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
   }
 
-  .barraMenu > li > a {
-    padding: 10px 15px;
+  .barraMenu > li {
+    margin: 5px 0;
   }
 
-  .barraMenuVertical {
-    position: static; 
-    display: none;
-    width: 100%;
+  #encabezado {
+    font-size: 40px;
+    margin-left: 0;
   }
 
-  .barraMenu li:hover .barraMenuVertical {
-    display: block;
-  }
-
-  .barraMenuVertical li {
-    text-align: center;
-    padding: 10px;
-  }
-
-  .imagen {
-    width: 100%; 
-    margin-right: 0;
-  }
-
-  .texto {
+  #p1, #p2 {
+    margin-left: 10%;
+    margin-right: 10%;
     font-size: 20px;
-    padding: 10px;
   }
-}
 
-.Peregrina {
-  display: flex;
-  align-items: center;
-  margin: 20px;
-}
-
-.imagen {
-  width: 500px;
-  height: auto;
-  margin-right: 20px;
-  margin-top: 0px;
-}
-
-.texto {
-  font-size: 30px;
-  border-style: solid;
-  border-width: 10px;
-  border-color: #527eaf;
-  border-radius: 10px;
-  padding: 20px;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
