--- a/obra3.css
+++ b/obra3.css
@@ -68,3 +68,47 @@ border-width: 10px;
 border-color: #527eaf;
 border-radius:10px;
 }
+@media (max-width: 600px) {
+    nav {
+        font-size: 16px;
+    }
+
+    .barraMenu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .barraMenu > li {
+        margin: 5px 0;
+    }
+
+    #encabezado {
+        font-size: 40px;
+        margin-left: 0;
+    }
+
+    #p1, #p2 {
+        margin-left: 10%;
+        margin-right: 10%;
+        font-size: 20px;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+
+    .imagen {
+        width: 100%; 
+        height: auto;
+        margin-right: 0;
+    }
+
+    
+    .texto {
+        font-size: 18px;
+        padding: 15px;
+    }
+}
+
